Setup Docker-environment

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
-DATABASE_URL=postgresql+psycopg2://postgres:password@localhost:5432/task_manager
-SECRET_KEY=
+# Choose environment: "local" for dev on your machine, "docker" when running via docker-compose
+ENV=local
+
+# Local database (Postgres installed on your machine)
+DATABASE_URL_LOCAL=postgresql+psycopg2://postgres:yourpassword@localhost:5432/taskmanager
+
+# Docker Compose database (service name is "db")
+DATABASE_URL_DOCKER=postgresql+psycopg2://postgres:yourpassword@db:5432/taskmanager
+
+# JWT
+SECRET_KEY=supersecret
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=60
+ACCESS_TOKEN_EXPIRE_MINUTES=30
