Start telegram bot

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ DATABASE_URL_DOCKER=postgresql+psycopg2://postgres:yourpassword@db:5432/taskmana
 SECRET_KEY=supersecret
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Telegram bot
+TELEGRAM_TOKEN=yourtoken
+API_URL=http://127.0.0.1:8000
